fix distortion, change title, change banner text

--- a/src/Components/Home-Page/Layout/Hero/SubComponents/FundraiserBanner/FundraiserBanner.module.css
+++ b/src/Components/Home-Page/Layout/Hero/SubComponents/FundraiserBanner/FundraiserBanner.module.css
@@ -27,7 +27,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 540px) {
   .greyText {
     display: none;
   }
